--- a/simulador-futbol-react/package.json
+++ b/simulador-futbol-react/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "test": "karma start --single-run"
+    "test": "karma start --single-run"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -31,6 +31,7 @@
     "jasmine-core": "^5.12.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-esbuild": "^2.3.0",
     "karma-jasmine": "^5.1.0",
     "postcss": "^8.5.6",
